--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "wiredep": "^4.0.0"
   },
   "dependencies": {
+    "ejs": "^2.5.6",
     "express": "^4.15.2",
     "socket.io": "^1.7.3",
     "webpack-dev-server": "^2.4.2"
