--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.18.8",
+    "copy-webpack-plugin": "^4.0.1",
+    "crypto": "^0.0.3",
     "express": "^4.15.2",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-inject": "^4.2.0",
     "gulp-watch": "^4.3.11",
+    "html-webpack-plugin": "^2.28.0",
     "socket.io": "^1.7.3",
     "webpack": "^2.2.1",
     "wiredep": "^4.0.0"
@@ -26,7 +29,6 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "socket.io": "^1.7.3",
-    "webpack-dev-server": "^2.4.2"
+    "socket.io": "^1.7.3"
   }
 }
