--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "node-rsa": "^0.4.2",
     "socket.io": "^1.7.3",
     "ursa": "^0.9.4"
   }
